refactor(customer): change to ResponseEntity as the response for all controller functions